<resources>
    <string name="app_name">KMT app</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="welcome_to_home_activity">Welcome to Home Activity!</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_logo">App Logo</string>
    <string name="mobile">Mobile</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="getotp">Get OTP</string>
    <string name="email">Email</string>
    <string name="password">Enter Password</string>
    <string name="login_with_email">Login with Email</string>
    <string name="google_sign_in">Google Sign in</string>
    <string name="default_web_client_id">506211157811-ia06oquv1molld0q72klhaivu8auafnm.apps.googleusercontent.com</string>
    <string name="use_email">Use Email</string>
    <string name="log_in">Log In</string>
    <string name="already_registered">Already registered?</string>
    <string name="register">Register</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="kmt_prawas">KMT PRAWAS</string>
    <string name="kmt_prawas_all_rights_reserved">© 2024 KMT Prawas. All Rights Reserved.</string>
    <string name="find_routes">Find Routes</string>
    <string name="check_bus_schedule">Check Bus Schedule</string>
    <string name="check_bus_stops">Check Bus Stops</string>
    <string name="bus_stop_schedules">Bus Stop Schedules</string>
    <string name="nearest_bus_stops">Nearest Bus Stops</string>
    <string name="see_all">See All</string>
    <string name="bus_stop_1">Bus Stop 1</string>
    <string name="bus_stop_2">Bus Stop 2</string>
    <string name="bus_stop_3">Bus Stop 3</string>
    <string name="bus_stop_4">Bus Stop 4</string>
    <string name="bus_stop_5">Bus Stop 5</string>
    <string name="no_schedules_available">No Schedules Available</string>
    <string name="googleMap">This window will show Google map</string>
    <string name="no_schedules_available_for_the_selected_bus_stops">No schedules available for the selected bus stops.</string>
    <string name="main_street">Main Street</string>
    <string name="kandalgaon">Kandalgaon</string>
    <string name="r_k_nagar">R.K Nagar</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="bharati_vidyapeeth">Bharati Vidyapeeth</string>
</resources>