<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3F2FD"
    android:backgroundTint="#F2F0D4">


    <!-- Search Bar -->

    <TextView
        android:id="@+id/title_kmt_prawas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/half_circle_background"
        android:backgroundTint="#B7E9BA"
        android:fontFamily="@font/lobster"
        android:gravity="center"
        android:text="@string/kmt_prawas"
        android:textColor="#000000"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"

        android:layout_marginEnd="10dp"
        android:background="@drawable/search_bar_background"
        android:contentDescription="@string/enter_destination"
        android:iconifiedByDefault="false"
        android:queryHint="Search Bus Stops"
        android:text="@string/nearest_bus_stops"
        app:layout_constraintBottom_toTopOf="@id/card_nearest_stops"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Nearest Bus Stops Window -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_nearest_stops"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nearest_bus_stops"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Sample Bus Stops -->
            <TextView
                android:id="@+id/stop_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/bharati_vidyapeeth"
                android:textColor="#616161"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/stop_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/kandalgaon"
                android:textColor="#616161"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/stop_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/r_k_nagar"
                android:textColor="#616161"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Google Maps Window -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_map"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_nearest_stops">

        <ImageView
            android:id="@+id/mapImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/sample_map" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
